feat: Add GreptimeDB connector for MQTT.
Signed-off-by: Yihai Lin <yihai-lin@foxmail.com>

--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -69,6 +69,7 @@ strum_macros.workspace = true
 async-stream.workspace = true
 network-server.workspace = true
 common-metrics.workspace = true
+reqwest.workspace = true
 
 [dev-dependencies]
 # test
