--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,6 +131,7 @@ uuid = { version = "1.7.0", features = ["v4"] }
 mobc = "0.9.0"
 dashmap = { version = "6.1.0", features = ["serde"] }
 snowflake = "1.3.0"
+reqwest = "0.12.23"
 rumqttc = "0.24.0"
 paho-mqtt = { version = "0.13.3", default-features = false, features = [
     "bundled",
