--- a/src/common/network-server/Cargo.toml
+++ b/src/common/network-server/Cargo.toml
@@ -37,3 +37,6 @@ grpc-clients.workspace = true
 futures-util.workspace = true
 rustls-pemfile.workspace = true
 common-config.workspace = true
+axum-extra.workspace = true
+axum-server.workspace = true
+kafka-protocol.workspace = true
