--- a/Cargo.toml
+++ b/Cargo.toml
@@ -192,6 +192,7 @@ humantime = "2.2.0"
 strum = "0.27"
 strum_macros = "0.27"
 async-stream = "0.3.6"
+kafka-protocol = "0.15.1"
 
 #pprof
 pprof = { version = "0.14.0", features = ["flamegraph"] }
