--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,8 @@ members = [
     "src/common/metadata-struct",
     "src/common/third-driver",
     "src/common/network-server",
-    "src/common/observability",
+    "src/common/metrics",
+    "src/common/security",
     "src/protocol",
     "src/journal-server",
     "src/journal-client",
@@ -133,7 +134,7 @@ snowflake = "1.3.0"
 rumqttc = "0.24.0"
 paho-mqtt = { version = "0.13.3", default-features = false, features = [
     "bundled",
-    "ssl"
+    "ssl",
 ] }
 ipnet = "2.3.0"
 os_info = "3.8.2"
@@ -178,7 +179,8 @@ rocksdb-engine = { path = "src/common/rocksdb-engine" }
 metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 network-server = { path = "src/common/network-server" }
-observability = { path = "src/common/observability" }
+common-metrics = { path = "src/common/metrics" }
+common-security = { path = "src/common/security" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
 robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
@@ -192,6 +194,7 @@ humantime = "2.2.0"
 strum = "0.27"
 strum_macros = "0.27"
 async-stream = "0.3.6"
+kafka-protocol = "0.15.1"
 
 #pprof
 pprof = { version = "0.14.0", features = ["flamegraph"] }
