--- a/Cargo.toml
+++ b/Cargo.toml
@@ -195,6 +195,7 @@ strum = "0.27"
 strum_macros = "0.27"
 async-stream = "0.3.6"
 kafka-protocol = "0.15.1"
+quiche = "0.24.5"
 
 #pprof
 pprof = { version = "0.14.0", features = ["flamegraph"] }
