--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -43,3 +43,4 @@ serde_json.workspace = true
 journal-server.workspace = true
 pprof-monitor.workspace = true
 network-server.workspace = true
+admin-server.workspace =true
