--- a/src/admin-server/Cargo.toml
+++ b/src/admin-server/Cargo.toml
@@ -22,6 +22,9 @@ license.workspace = true
 axum.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+serde_json.workspace = true
+serde.workspace = true
+common-base.workspace = true
 
 [dev-dependencies]
 mockall.workspace = true
