refactor: refactor create acl command
Signed-off-by: PorterZhang2021 <porterzhang2021@outlook.com>

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -44,6 +44,7 @@ clap-cargo.workspace = true
 protocol.workspace = true
 console-subscriber.workspace = true
 broker-server.workspace = true
+metadata-struct.workspace = true
 
 [dev-dependencies]
 mockall.workspace = true
