--- a/src/common/metadata-struct/Cargo.toml
+++ b/src/common/metadata-struct/Cargo.toml
@@ -30,3 +30,4 @@ tracing.workspace = true
 dashmap.workspace = true
 crc32fast.workspace = true
 tokio.workspace = true
+lazy_static.workspace = true
