--- a/Cargo.toml
+++ b/Cargo.toml
@@ -186,7 +186,7 @@ common-security = { path = "src/common/security" }
 admin-server = { path = "src/admin-server" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-robustmq-proto-build = { git = "https://github.com/socutes/robustmq-proto.git", branch = "dev-7" }
+robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
 pprof-monitor = { path = "src/common/pprof-monitor" }
 sysinfo = "0.29.10"
 chrono = "0.4.41"
