--- a/src/admin-server/Cargo.toml
+++ b/src/admin-server/Cargo.toml
@@ -30,6 +30,7 @@ network-server.workspace = true
 grpc-clients.workspace = true
 common-config.workspace = true
 metadata-struct.workspace = true
+broker-core.workspace = true
 
 [dev-dependencies]
 mockall.workspace = true
