--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -70,6 +70,7 @@ async-stream.workspace = true
 network-server.workspace = true
 common-metrics.workspace = true
 reqwest.workspace = true
+broker-core.workspace = true
 
 [dev-dependencies]
 # test
