--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -44,3 +44,4 @@ opentelemetry_sdk.workspace = true
 opentelemetry-otlp.workspace = true
 bincode.workspace = true
 apache-avro.workspace = true
+broker-core.workspace = true
