refactor: Create the general module of broker core (#1348)
* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* de v

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

---------

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>
Co-authored-by: wenqiang.xu <wenqiang.xu@okg.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@
 
 [workspace]
 members = [
-    "src/broker",
+    "src/broker-server",
+    "src/broker-core",
     "src/admin-server",
     "src/mqtt-broker",
     "src/amqp-broker",
@@ -161,8 +162,9 @@ console-subscriber = "0.4.1"
 prettytable-rs = "^0.10"
 ## workspaces members
 mqtt-broker = { path = "src/mqtt-broker" }
-amqp-broker = { path = "src/amqp-broker" }
-broker-server = { path = "src/broker" }
+core- = { path = "src/amqp-broker" }
+broker-server = { path = "src/broker-server" }
+broker-core = { path = "src/broker-core" }
 kafka-broker = { path = "src/kafka-broker" }
 delay-message = { path = "src/delay-message" }
 meta-service = { path = "src/meta-service" }
