--- a/src/broker-core/Cargo.toml
+++ b/src/broker-core/Cargo.toml
@@ -13,34 +13,19 @@
 # limitations under the License.
 
 [package]
-name = "broker-server"
+name = "broker-core"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
-
 [dependencies]
-bytes.workspace = true
-axum.workspace = true
-thiserror.workspace = true
-mqtt-broker.workspace = true
-meta-service.workspace = true
-tonic.workspace = true
-tower-http = { workspace = true, features = ["cors"] }
-tonic-web.workspace = true
-tokio.workspace = true
 common-base.workspace = true
-tower.workspace = true
-protocol.workspace = true
 common-config.workspace = true
-openraft.workspace = true
 grpc-clients.workspace = true
-tracing-appender.workspace = true
-delay-message.workspace = true
-schema-register.workspace = true
-tracing.workspace = true
+metadata-struct.workspace = true
+protocol.workspace = true
+serde.workspace = true
 serde_json.workspace = true
-journal-server.workspace = true
-pprof-monitor.workspace = true
-network-server.workspace = true
-admin-server.workspace =true
+dashmap.workspace = true
+tokio.workspace = true
+tracing.workspace = true
