--- a/src/broker-server/Cargo.toml
+++ b/src/broker-server/Cargo.toml
@@ -13,24 +13,35 @@
 # limitations under the License.
 
 [package]
-name = "admin-server"
+name = "broker-server"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
+
 [dependencies]
+bytes.workspace = true
 axum.workspace = true
+thiserror.workspace = true
+mqtt-broker.workspace = true
+meta-service.workspace = true
+tonic.workspace = true
+tower-http = { workspace = true, features = ["cors"] }
+tonic-web.workspace = true
 tokio.workspace = true
+common-base.workspace = true
+tower.workspace = true
+protocol.workspace = true
+common-config.workspace = true
+openraft.workspace = true
+grpc-clients.workspace = true
+tracing-appender.workspace = true
+delay-message.workspace = true
+schema-register.workspace = true
 tracing.workspace = true
 serde_json.workspace = true
-serde.workspace = true
-common-base.workspace = true
-mqtt-broker.workspace = true
+journal-server.workspace = true
+pprof-monitor.workspace = true
 network-server.workspace = true
-grpc-clients.workspace = true
-common-config.workspace = true
-metadata-struct.workspace = true
+admin-server.workspace = true
 broker-core.workspace = true
-
-[dev-dependencies]
-mockall.workspace = true
