--- a/Cargo.toml
+++ b/Cargo.toml
@@ -133,7 +133,7 @@ uuid = { version = "1.7.0", features = ["v4"] }
 mobc = "0.9.0"
 dashmap = { version = "6.1.0", features = ["serde"] }
 snowflake = "1.3.0"
-reqwest = "0.12.23"
+reqwest = { version = "0.12.23", features = ["json"] }
 rumqttc = "0.24.0"
 paho-mqtt = { version = "0.13.3", default-features = false, features = [
     "bundled",
