refactor: Optimize the command-line code and add command-line documentation (#1359)
* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

---------

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>
Co-authored-by: wenqiang.xu <wenqiang.xu@okg.com>

--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -35,3 +35,5 @@ paho-mqtt.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 admin-server.workspace = true
+clap.workspace = true
+clap-cargo.workspace = true
