--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -45,3 +45,4 @@ opentelemetry-otlp.workspace = true
 bincode.workspace = true
 apache-avro.workspace = true
 broker-core.workspace = true
+admin-server.workspace = true
