--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -45,4 +45,7 @@ opentelemetry-otlp.workspace = true
 bincode.workspace = true
 apache-avro.workspace = true
 broker-core.workspace = true
+rustls.workspace = true
+quinn.workspace = true
+rustls-pemfile.workspace = true
 admin-server.workspace = true
