--- a/config/server.toml.template
+++ b/config/server.toml.template
@@ -16,7 +16,7 @@ cluster_name = "broker-server"
 broker_id = 1
 roles = ["place", "broker"]
 grpc_port = 1228
-placement_center = { 1 = "127.0.0.1:1228" }
+meta_addrs = { 1 = "127.0.0.1:1228" }
 
 [prometheus]
 enable = true
@@ -47,7 +47,7 @@ lock_try_mut_sleep_time_ms = 50
 data_path = "./data/placement-center/data"
 max_open_files = 10000
 
-[place.runtime]
+[meta.runtime]
 heartbeat_timeout_ms = 5000
 heartbeat_check_time_ms = 1000
 
