--- a/src/admin-server/Cargo.toml
+++ b/src/admin-server/Cargo.toml
@@ -35,5 +35,7 @@ protocol.workspace = true
 schema-register.workspace = true
 reqwest.workspace = true
 thiserror.workspace = true
+tower-http.workspace = true
+tower.workspace = true
 [dev-dependencies]
 mockall.workspace = true
