--- a/src/broker-core/Cargo.toml
+++ b/src/broker-core/Cargo.toml
@@ -29,3 +29,4 @@ serde_json.workspace = true
 dashmap.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+rocksdb-engine.workspace = true
