--- a/src/meta-service/Cargo.toml
+++ b/src/meta-service/Cargo.toml
@@ -48,3 +48,4 @@ prost-validate = { workspace = true, features = ["derive"] }
 tempfile.workspace = true
 tracing-appender.workspace = true
 async-stream.workspace = true
+broker-core.workspace = true
