--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -49,3 +49,6 @@ rustls.workspace = true
 quinn.workspace = true
 rustls-pemfile.workspace = true
 admin-server.workspace = true
+uuid.workspace = true
+network-server.workspace = true
+futures-util = "0.3.31"
