--- a/src/meta-service/Cargo.toml
+++ b/src/meta-service/Cargo.toml
@@ -49,3 +49,4 @@ tempfile.workspace = true
 tracing-appender.workspace = true
 async-stream.workspace = true
 broker-core.workspace = true
+common-metrics.workspace = true
