--- a/src/broker-server/Cargo.toml
+++ b/src/broker-server/Cargo.toml
@@ -45,3 +45,4 @@ pprof-monitor.workspace = true
 network-server.workspace = true
 admin-server.workspace = true
 broker-core.workspace = true
+common-metrics.workspace = true
