--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,7 +115,7 @@ tonic = "0.12.3"
 tonic-build = "0.12.3"
 tonic-web = "0.12.3"
 tower = "0.5.2"
-tower-http = "0.5.2"
+tower-http = { version = "0.5.2", features = ["fs", "cors"] }
 # quic
 quinn = "0.11.6"
 rcgen = "0.13.2"
