--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -59,6 +59,10 @@ chrono-tz.workspace = true
 anyhow.workspace = true
 quinn.workspace = true
 rustls.workspace = true
+r2d2.workspace = true
+r2d2_mysql.workspace = true
+r2d2_postgres.workspace = true
+r2d2_redis.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
