--- a/src/common/third-driver/Cargo.toml
+++ b/src/common/third-driver/Cargo.toml
@@ -22,3 +22,6 @@ license.workspace = true
 thiserror.workspace = true
 common-base.workspace = true
 mysql.workspace = true
+r2d2_postgres.workspace = true
+r2d2_mysql.workspace = true
+r2d2_redis.workspace = true
