--- a/src/storage-adapter/Cargo.toml
+++ b/src/storage-adapter/Cargo.toml
@@ -38,3 +38,4 @@ rocksdb-engine.workspace = true
 journal-client.workspace = true
 futures.workspace = true
 opendal.workspace = true
+r2d2_mysql.workspace = true
