--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -29,8 +29,8 @@ serde.workspace = true
 serde_json.workspace = true
 toml.workspace = true
 uuid.workspace = true
-env_logger = "0.10.0"
-local-ip-address = "0.6.1"
+env_logger = { workspace = true }
+local-ip-address = { workspace = true }
 tonic.workspace = true
 humantime-serde.workspace = true
 prost.workspace = true
