--- a/src/robustmq-macro/Cargo.toml
+++ b/src/robustmq-macro/Cargo.toml
@@ -22,15 +22,15 @@ license.workspace = true
 proc-macro = true
 
 [dependencies]
-syn = { version = "2", features = ["full"] }
-quote = "1"
-proc-macro2 = "1"
+syn = { workspace = true, features = ["full"] }
+quote = { workspace = true }
+proc-macro2 = { workspace = true }
 
 [dev-dependencies]
-macrotest = "1.1.0"
-trybuild = "1.0"
+macrotest = { workspace = true }
+trybuild = { workspace = true }
 prost-validate = { workspace = true, features = ["derive"] }
-async-trait = { version = "0.1.88" }
+async-trait = { workspace = true }
 tonic.workspace = true
 
 [features]
