--- a/src/admin-server/Cargo.toml
+++ b/src/admin-server/Cargo.toml
@@ -25,6 +25,7 @@ tracing.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 common-base.workspace = true
+common-metrics.workspace = true
 mqtt-broker.workspace = true
 network-server.workspace = true
 grpc-clients.workspace = true
@@ -37,5 +38,7 @@ reqwest.workspace = true
 thiserror.workspace = true
 tower-http.workspace = true
 tower.workspace = true
+lazy_static.workspace = true
+chrono.workspace = true
 [dev-dependencies]
 mockall.workspace = true
