fix: keep_alive_test disconnect quit

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -133,7 +133,7 @@ CMD ["--conf=/robustmq/config/server.toml"]
 # Alternative: Service-specific stages for microservice deployment
 # ==============================================================================
 
-# Meta Service (Placement Center)
+# Meta Service (meta service)
 FROM runtime AS meta-service
 ENV ROBUSTMQ_ROLES="meta"
 EXPOSE 1228
