--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -35,6 +35,7 @@ serde.workspace = true
 validator.workspace = true
 prost-validate = { workspace = true, features = ["derive"] }
 kafka-protocol.workspace = true
+pulsar.workspace = true
 
 [dev-dependencies]
 robustmq-test.workspace = true
