--- a/Cargo.toml
+++ b/Cargo.toml
@@ -214,6 +214,7 @@ strum_macros = "0.27"
 async-stream = "0.3.6"
 kafka-protocol = "0.15.1"
 governor = "0.10.1"
+pulsar = "6.3.1"
 
 #pprof
 pprof = { version = "0.14.0", features = ["flamegraph"] }
