--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -71,6 +71,18 @@ network-server.workspace = true
 common-metrics.workspace = true
 reqwest.workspace = true
 broker-core.workspace = true
+#security
+r2d2.workspace = true
+r2d2_mysql.workspace = true
+r2d2_postgres.workspace = true
+r2d2_redis.workspace = true
+md5.workspace = true
+sha1.workspace = true
+sha2.workspace = true
+bcrypt.workspace = true
+pbkdf2.workspace = true
+hmac.workspace = true
+hex.workspace = true
 
 
 [dev-dependencies]
