--- a/Cargo.toml
+++ b/Cargo.toml
@@ -161,7 +161,7 @@ console-subscriber = "0.4.1"
 r2d2_postgres = "0.18.2"
 r2d2_mysql = "25.0.0"
 r2d2 = "0.8.10"
-r2d2_redis = "0.14.0"
+redis = { version = "0.32.6", features = ["r2d2"] }
 md5 = "0.8.0"
 sha1 = "0.10.6"
 sha2 = "0.10.9"
