--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -62,7 +62,7 @@ rustls.workspace = true
 r2d2.workspace = true
 r2d2_mysql.workspace = true
 r2d2_postgres.workspace = true
-r2d2_redis.workspace = true
+redis.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
