--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -76,7 +76,7 @@ pulsar.workspace = true
 r2d2.workspace = true
 r2d2_mysql.workspace = true
 r2d2_postgres.workspace = true
-r2d2_redis.workspace = true
+redis.workspace = true
 md5.workspace = true
 sha1.workspace = true
 sha2.workspace = true
