--- a/src/common/rocksdb-engine/Cargo.toml
+++ b/src/common/rocksdb-engine/Cargo.toml
@@ -30,6 +30,7 @@ dashmap.workspace = true
 futures.workspace = true
 metadata-struct.workspace = true
 tempfile.workspace = true
+common-metrics.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
