--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -63,6 +63,7 @@ r2d2.workspace = true
 r2d2_mysql.workspace = true
 r2d2_postgres.workspace = true
 redis.workspace = true
+governor.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
