--- a/src/common/rocksdb-engine/Cargo.toml
+++ b/src/common/rocksdb-engine/Cargo.toml
@@ -30,3 +30,7 @@ futures.workspace = true
 metadata-struct.workspace = true
 tempfile.workspace = true
 common-metrics.workspace = true
+
+[dev-dependencies]
+tokio.workspace = true
+common-config.workspace = true
