--- a/config/server.toml
+++ b/config/server.toml
@@ -31,6 +31,14 @@ frequency = 1000
 log_config = "./config/server-tracing.toml"
 log_path = "./data/broker/logs"
 
+[network]
+accept_thread_num = 64
+handler_thread_num = 128
+response_thread_num = 64
+queue_size = 1000
+lock_max_try_mut_times = 30
+lock_try_mut_sleep_time_ms = 50
+
 [prometheus]
 enable = true
 port = 9091
