--- a/config/server.toml
+++ b/config/server.toml
@@ -23,7 +23,7 @@ data_path = "./data/broker/data"
 max_open_files = 10000
 
 [p_prof]
-enable = true
+enable = false
 port = 6777
 frequency = 1000
 
@@ -32,9 +32,9 @@ log_config = "./config/server-tracing.toml"
 log_path = "./data/broker/logs"
 
 [network]
-accept_thread_num = 32
-handler_thread_num = 128
-response_thread_num = 32
+accept_thread_num = 64
+handler_thread_num = 512
+response_thread_num = 64
 queue_size = 1000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
