--- a/.github/workflows/ig-all-test.yml
+++ b/.github/workflows/ig-all-test.yml
@@ -47,5 +47,12 @@ jobs:
         uses: ./.github/actions/setup-builder
 
       - name: Install cargo-nextest
-        uses: baptiste09
+        uses: baptiste0928/cargo-install@v1
+        with:
+          crate: cargo-nextest
+          args: --locked
 
+      - uses: actions/checkout@v3
+
+      - name: Run tests
+        run: sh ./scripts/mqtt-ig.sh
