refactor: Optimize the production line && Improve performance (#1440)
* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* de v

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

---------

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>
Co-authored-by: wenqiang.xu <wenqiang.xu@okg.com>

--- a/.github/workflows/ig-all-test.yml
+++ b/.github/workflows/ig-all-test.yml
@@ -43,6 +43,16 @@ jobs:
         with:
           submodules: true
 
-      # Clean up disk space by removing old cache and temp files to prevent running out of space
-      - name: Clean up disk space
-        run: |
+      - name: set up build configure
+        uses: ./.github/actions/setup-builder
+
+      - name: Install cargo-nextest
+        uses: baptiste0928/cargo-install@v1
+        with:
+          crate: cargo-nextest
+          args: --locked
+
+      - uses: actions/checkout@v3
+
+      - name: Run tests
+        run: sh ./scripts/mqtt-ig.sh
